<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.byteflipper.ffsensitivities.ui.fragment.AboutFragment"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="21dp"
        app:cardUseCompatPadding="true"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:text="ByteFlipper"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/bug_report_title"
                app:listSubtitle="@string/bug_report_subtitle"
                app:listIcon="@drawable/bug_report_24px"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/rate_the_app_title"
                app:listSubtitle="@string/rate_the_app_subtitle"
                app:listIcon="@drawable/rate_review_24px"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/other_apps_title"
                app:listSubtitle="@string/other_apps_subtitle"
                app:listIcon="@drawable/apps_24px"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="21dp"
        app:cardUseCompatPadding="true"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:orientation="vertical">

            <!--ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="1dp"
                tools:listitem="@layout/item_list"
                android:orientation="vertical"/-->

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/website_title"
                app:listSubtitle="@string/website_subtitle"
                app:listIcon="@drawable/web_24px"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/vk_title"
                app:listSubtitle="@string/vk_subtitle"
                app:listIcon="@drawable/vk_24"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/telegram_title"
                app:listSubtitle="@string/telegram_subtitle"
                app:listIcon="@drawable/telegram_24"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/github_title"
                app:listSubtitle="@string/github_subtitle"
                app:listIcon="@drawable/github_24"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/source_code_title"
                app:listSubtitle="@string/source_code_subtitle"
                app:listIcon="@drawable/code_24px"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerInsetEnd="32dp"
                app:dividerInsetStart="32dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomItemView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listTitle="@string/version"
                app:listSubtitle="Version 1.0.0"
                app:listIcon="@drawable/info_24px"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>