<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.byteflipper.ffsensitivities.ui.fragment.SettingsFragment"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="21dp"
    app:cardUseCompatPadding="true"
    style="@style/Widget.Material3.CardView.Elevated">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/app_theme"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <com.byteflipper.ffsensitivities.ui.components.CustomSwitchView
            android:id="@+id/dynamicColorsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:switchTitle="@string/switch_use_dynamic_colors_title"
            app:switchSubtitleOn="@string/switch_use_dynamic_colors_subtitle_on"
            app:switchSubtitleOff="@string/switch_use_dynamic_colors_subtitle_off"
            app:switchValue="false"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            style="@style/Widget.Material3.MaterialDivider"/>

        <RadioGroup
            android:id="@+id/appThemeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/setFollowSystemTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_theme"
                android:textSize="16sp"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/setLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:textSize="16sp"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/setNightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_theme"
                android:textSize="16sp"/>
        </RadioGroup>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/themeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/system_theme_description"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>