<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    tools:context="com.byteflipper.ffsensitivities.ui.fragment.SensitivitiesFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="21dp"
    style="@style/Widget.Material3.CardView.Elevated">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.byteflipper.ffsensitivities.ui.components.CustomSliderView
                android:id="@+id/review_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/review"
                app:value="58.0"
                app:enabled="false"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomSliderView
                android:id="@+id/collimator_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/collimator"
                app:value="58.0"
                app:enabled="false"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomSliderView
                android:id="@+id/x2_scope_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/x2_scope"
                app:value="58.0"
                app:enabled="false"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <com.byteflipper.ffsensitivities.ui.components.CustomSliderView
                android:id="@+id/x4_scope_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/x4_scope"
                app:value="58.0"
                app:enabled="false"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewDPI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:contentDescription="@string/dpi"
                android:text="@string/dpi"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/it_works"
                android:textAppearance="?attr/textAppearanceHeadline6"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:id="@+id/work_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/not_work_btn"
                app:icon="@drawable/thumb_up_24px"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/not_work_btn"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                app:icon="@drawable/thumb_down_24px" />
        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourceButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:paddingVertical="16dp"
                android:text="@string/source"
                android:textSize="16sp"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/copyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:paddingVertical="16dp"
                android:text="@string/copy"
                android:textSize="16sp"
                style="@style/Widget.Material3.Button.TonalButton"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>